--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
         <a href="./v1.1.3.rbxm" download>
             <p style="font-family:Courier; color:green">> GodMode Server V1.1.3</p>
         </a>
+        <a href="./v1.1.4.rbxm" download>
+            <p style="font-family:Courier; color:green">> GodMode Server V1.1.4</p>
+        </a>
     </body>
 </html>
