--- a/index.html
+++ b/index.html
@@ -3,24 +3,8 @@
     <head>
         <title>GodMode7 - Home</title>
     </head>
-    <body style="background-color:rgb(0, 0, 0);">
-        <h1 style="color:green"><listing><center>
- ___      ___  __        ____    __   ___   _______        __        ____   _____  ___   
-|"  \    /"  |/""\      /  " \  |/"| /  ") /"      \      /""\      /  " \ (\"   \|"  \  
- \   \  //  //    \    /__|| |  (: |/   / |:        |    /    \    /__|| | |.\\   \    | 
-  \\  \/. .//' /\  \      |: |  |    __/  |_____/   )   /' /\  \      |: | |: \.   \\  | 
-   \.    ////  __'  \    _\  |  (// _  \   //      /   //  __'  \    _\  | |.  \    \. | 
-    \\   //   /  \\  \  /" \_|\ |: | \  \ |:  __   \  /   /  \\  \  /" \_|\|    \    \ | 
-     \__/(___/    \___)(_______)(__|  \__)|__|  \___)(___/    \___)(_______)\___|\____\) 
-                                                                                         
-        </center></listing></h1>
-        <p style="font-family:Courier; color:green">> </p>
-        <p style="font-family:Courier; color:green">> Useful links and downloads are below</p>
-        <a href="./v1.1.3.rbxm" download>
-            <p style="font-family:Courier; color:green">> GodMode Server V1.1.3</p>
-        </a>
-        <a href="./v1.1.4.rbxm" download>
-            <p style="font-family:Courier; color:green">> GodMode Server V1.1.4</p>
-        </a>
+    <body>
+        <p>This website has been retired.</p>
+        <p>Orginial Author : cr.ghost aka checkra1nz</p>
     </body>
 </html>
