--- a/what.html
+++ b/what.html
@@ -14,7 +14,8 @@
          \/            \/       \/            \/    \/        
                                                                   
         </center></listing></h1>
-        <p style="font-family:Courier; color:red">> Made by Isax74 and licensed by MIT</p>
-        <p style="font-family:Courier; color:red">> error has occured.</p>
+        <p style="font-family:Courier; color:red">> This website has been retired forever</p>
+        <p style="font-family:Courier; color:red">> Changes were made on 2023-08-20 at 00:18AM</p>
+        <p style="font-family:Courier; color:red">> Created by cr.ghost aka checkra1nz</p>
     </body>
 </html>
