--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
  /   \  ___ /  _ \ / __ |/  \ /  \ /  _ \ / __ |/ __ \  /    /
  \    \_\  (  <_> ) /_/ /    Y    (  <_> ) /_/ \  ___/ /    / 
   \______  /\____/\____ \____|__  /\____/\____ |\___  >____/  
-         \/            \/       \/            \/    \/        
+         \/            \/       \/            \/    \/   
+     Created by cr.ghost aka ph0neh1 aka checkra1nz
                                                                   
         </center></listing></h1>
-        <p style="font-family:Courier; color:red">> This website has been retired forever</p>
-        <p style="font-family:Courier; color:red">> Changes were made on 2023-08-20 at 00:18AM</p>
-        <p style="font-family:Courier; color:red">> Created by cr.ghost aka checkra1nz</p>
+        <p style="font-family:Courier; color:red">> This website has been permanently retired forever</p>
+        <p style="font-family:Courier; color:red">> This decision was made on 2023-08-20 at 00:18AM</p>
     </body>
 </html>
